--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">btconsole</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Test change</string>
-    <string name="button">Send</string>
+    <string name="new_connection">New Connection</string>
 	<string name="hint">Text</string>
 </resources>
