--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Test change</string>
     <string name="new_connection">New Connection</string>
-	<string name="hint">Text</string>
+    <string name="hint">Text</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_configure">ConfigureActivity</string>
+
 </resources>
