--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,19 +3,19 @@
 
     <string name="app_name">btconsole</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Test change</string>
     <string name="new_connection">New Connection</string>
-    <string name="hint">Text</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_configure">ConfigureActivity</string>
+
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="device_select_string">Select a device</string>
-    <string name="title_activity_control">ControlActivity</string>
-    
-    <!--  Control Panel -->
+    <string name="title_activity_control">Control a Device</string>
+
+    <!-- Control Panel -->
     <string name="start_string">Start</string>
     <string name="stop_string">Stop</string>
+    <string name="info_string">Request Info</string>
+    <string name="status_string">Request Status</string>
+    <string name="debug_string">Request Debug</string>
     <string name="fwupdate_string">Update Firmware</string>
     <string name="apply_string">Apply Changes</string>
     <string name="data_string">Collect Data</string>
@@ -23,5 +23,5 @@
     <string name="collectdata">Collect Data</string>
     <string name="startipserver_string">Start IP Server</string>
     <string name="stopipserver_string">Stop IP Server</string>
-    
+
 </resources>
