--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="data_string">Collect Data</string>
     <string name="log_string">Log</string>
     <string name="collectdata">Collect Data</string>
-    <string name="startipserver_string">Start IP Server</string>
-    <string name="stopipserver_string">Stop IP Server</string>
+    <string name="startipserver_string">Start TCP/IP Server</string>
+    <string name="stopipserver_string">Stop TCP/IP Server</string>
 
 </resources>
